--- a/.env.local.example
+++ b/.env.local.example
@@ -9,3 +9,7 @@ VITE_API_URL=http://localhost:4000/api
 
 # Gemini API Key (optional, if using AI features)
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
+
+# Admin Credentials (changed to 2030)
+VITE_ADMIN_USER=ADMIN
+VITE_ADMIN_PASS=2030
